# ash-urn

./: Cargo.toml  README.md
examples/: main.rs  sdl.rs
examples/basic_compute/: main.rs  particles.rs  sdl.rs
examples/basic_compute/assets/: cube.glb  mod.rs  tank.gltf
examples/basic_compute/run/: compute.rs  mod.rs  present.rs  render.rs  uniform_buffer.rs
examples/basic_compute/setup/: base.rs  command.rs  descriptor.rs  (+7 more)
examples/basic_graphics/: error.rs  main.rs  sdl.rs
examples/shaders/: shader.vert  vert.spv
src/: error.rs  lib.rs  memory_alignment.rs  mesh.rs  sync.rs  urn_mesh.rs  util.rs
src/ash_base/: entry.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  validation.rs
src/base/: entry.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue_families.rs  swapchain.rs  validation.rs
src/command/: buffer.rs  draw.rs  image_layout.rs  mod.rs  queue.rs  single_time.rs
src/commands/: buffer.rs  mod.rs  pool.rs  queue.rs
src/descriptor/: descriptor_types.rs  layout.rs  mod.rs  pool.rs  set.rs
src/device_buffer/: buffer.rs  memory.rs  mod.rs
src/device_image/: depth.rs  image.rs  memory.rs  mod.rs  sampler.rs  view.rs
src/pipeline/: layout.rs  mod.rs  shader_module.rs
src/queries/: mod.rs  timestamp.rs
src/render_pass/: attachment.rs  mod.rs  subpass.rs
src/swap_chain/: extent.rs  format.rs  loader.rs  mod.rs  present_mode.rs  surface_format.rs
src/sync/: fence.rs  mod.rs  semaphore.rs  timeline.rs
src/transfer/: copy.rs  index.rs  mod.rs  ownership.rs  staging.rs  storage.rs  texture.rs  vertex.rs
(+43 files in other folders)
