[package]
name = "ash-urn"
version = "0.1.0"
authors = ["Lars Helge Scheel <larshelge.scheel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ash       = "0.29.0" Doesn't have 1.2 support
ash        = { git = "https://github.com/MaikKlein/ash.git", branch = "master" }

[dev-dependencies]
sdl2      = "0.32"
