[package]
name = "ash-urn"
version = "0.1.0"
authors = ["Lars Helge Scheel <larshelge.scheel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash       = "0.30.0"
memoffset = "0.5.3"

[dev-dependencies]
sdl2      = "0.32"
