[package]
name = "ash-urn"
version = "0.1.0"
authors = ["Lars Helge Scheel <larshelge.scheel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash       = "0.30.0"
memoffset = "0.5.3"
image     = "0.23.0-preview.0"

[dev-dependencies]
gltf      = { version = "0.15.2", features = ["utils"] }
sdl2      = "0.32"
cgmath    = "0.17.0"
itertools = "0.9.0"
